added non root method for Wifi Adb